--- a/money-for-rabbit/public/index.html
+++ b/money-for-rabbit/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
