:lipstick: (halam/#75) a 태그 스타일 초기화 추가

--- a/money-for-rabbit/src/email/index.html
+++ b/money-for-rabbit/src/email/index.html
@@ -4,6 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Money For Rabbit Email Authentication</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style type="text/css">
+      a {
+        text-decoration: none;
+        color: transparent;
+      }
+    </style>
   </head>
   <body
     style="
