:lipstick: (halam/#129) 타이틀 설정

--- a/money-for-rabbit/public/index.html
+++ b/money-for-rabbit/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Money For Rabbit</title>
     <meta
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
