:construction: (halam/#129) 오픈 그래프 작업 중 - 썸네일 미완성

--- a/money-for-rabbit/public/index.html
+++ b/money-for-rabbit/public/index.html
@@ -9,7 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Money For Rabbit" />
+    <meta property="og:title" content="🐰 Money For Rabbit 💸" />
+    <meta
+      property="og:description"
+      content="지인들에게 덕담을 담은 세뱃돈을 보내보세요!"
+    />
+    <!-- <meta property="og:image" content="/images/thumbnail.jpg" /> -->
+    <meta property="og:url" content="https://money-for-rabbit.netlify.app/" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
