--- a/money-for-rabbit/public/index.html
+++ b/money-for-rabbit/public/index.html
@@ -18,7 +18,7 @@
     />
     <meta
       property="og:image"
-      content="https://i.ibb.co/yFgQSGP/mail-template-header.png"
+      content="https://i.ibb.co/YTnVx1X/thumbnail.png"
     />
     <meta property="og:url" content="https://money-for-rabbit.netlify.app/" />
 
