:lipstick: (halam/#129) 오픈그래프 썸네일 사진 사이즈 조절 => width: 1536px

--- a/money-for-rabbit/public/index.html
+++ b/money-for-rabbit/public/index.html
@@ -18,7 +18,7 @@
     />
     <meta
       property="og:image"
-      content="https://i.ibb.co/YTnVx1X/thumbnail.png"
+      content="https://i.ibb.co/k1PzJqn/thumbnail.png"
     />
     <meta property="og:url" content="https://money-for-rabbit.netlify.app/" />
 
